[gd_scene load_steps=3 format=2]

[ext_resource path="res://tools/editor/SongMetadataEditor.gd" type="Script" id=2]
[ext_resource path="res://tools/icons/icon_help.svg" type="Texture" id=3]

[node name="SongMetaEditor" type="Panel"]
margin_left = 634.0
margin_right = 1260.0
margin_bottom = 700.0
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Metadata" type="ScrollContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Metadata"]
margin_right = 618.0
margin_bottom = 664.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Metadata/VBoxContainer"]
margin_right = 618.0
margin_bottom = 14.0
text = "Title"

[node name="SongTitle" type="LineEdit" parent="TabContainer/Metadata/VBoxContainer"]
margin_top = 18.0
margin_right = 618.0
margin_bottom = 42.0
caret_blink = true
caret_blink_speed = 0.5

[node name="Label10" type="HBoxContainer" parent="TabContainer/Metadata/VBoxContainer"]
margin_top = 46.0
margin_right = 618.0
margin_bottom = 71.0

[node name="Label" type="Label" parent="TabContainer/Metadata/VBoxContainer/Label10"]
margin_top = 5.0
margin_right = 101.0
margin_bottom = 19.0
text = "Romanized title"

[node name="TextureRect" type="TextureRect" parent="TabContainer/Metadata/VBoxContainer/Label10"]
margin_left = 105.0
margin_right = 120.0
margin_bottom = 25.0
rect_min_size = Vector2( 15, 25 )
hint_tooltip = "Title transliterated to use the latin script.

For example, a japanese song's title transliterated to romaji."
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="SongRomanizedTitle" type="LineEdit" parent="TabContainer/Metadata/VBoxContainer"]
margin_top = 75.0
margin_right = 618.0
margin_bottom = 99.0
caret_blink = true
caret_blink_speed = 0.5

[node name="Label4" type="Label" parent="TabContainer/Metadata/VBoxContainer"]
margin_top = 103.0
margin_right = 618.0
margin_bottom = 117.0
text = "Artist/Circle"

[node name="SongArtist" type="LineEdit" parent="TabContainer/Metadata/VBoxContainer"]
margin_top = 121.0
margin_right = 618.0
margin_bottom = 145.0
caret_blink = true
caret_blink_speed = 0.5

[node name="Label2" type="Label" parent="TabContainer/Metadata/VBoxContainer"]
margin_top = 149.0
margin_right = 618.0
margin_bottom = 163.0
text = "Artist alias (leave empty if using real name)"

[node name="SongArtistAlias" type="LineEdit" parent="TabContainer/Metadata/VBoxContainer"]
margin_top = 167.0
margin_right = 618.0
margin_bottom = 191.0
caret_blink = true
caret_blink_speed = 0.5

[node name="Label6" type="HBoxContainer" parent="TabContainer/Metadata/VBoxContainer"]
margin_top = 195.0
margin_right = 618.0
margin_bottom = 220.0

[node name="Label" type="Label" parent="TabContainer/Metadata/VBoxContainer/Label6"]
margin_top = 5.0
margin_right = 80.0
margin_bottom = 19.0
text = "Original title"

[node name="TextureRect" type="TextureRect" parent="TabContainer/Metadata/VBoxContainer/Label6"]
margin_left = 84.0
margin_right = 99.0
margin_bottom = 25.0
rect_min_size = Vector2( 15, 25 )
hint_tooltip = "Title used for songs that are based on others, such as remixes."
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="SongOriginalTitle" type="LineEdit" parent="TabContainer/Metadata/VBoxContainer"]
margin_top = 224.0
margin_right = 618.0
margin_bottom = 248.0
caret_blink = true
caret_blink_speed = 0.5

[node name="Label7" type="Label" parent="TabContainer/Metadata/VBoxContainer"]
margin_top = 252.0
margin_right = 618.0
margin_bottom = 266.0
text = "Vocals (separated by newline)"

[node name="SongVocals" type="TextEdit" parent="TabContainer/Metadata/VBoxContainer"]
margin_top = 270.0
margin_right = 618.0
margin_bottom = 371.0
size_flags_vertical = 3

[node name="Label8" type="Label" parent="TabContainer/Metadata/VBoxContainer"]
margin_top = 375.0
margin_right = 618.0
margin_bottom = 389.0
text = "Composers"

[node name="SongComposers" type="TextEdit" parent="TabContainer/Metadata/VBoxContainer"]
margin_top = 393.0
margin_right = 618.0
margin_bottom = 494.0
size_flags_vertical = 3

[node name="Label3" type="Label" parent="TabContainer/Metadata/VBoxContainer"]
margin_top = 498.0
margin_right = 618.0
margin_bottom = 512.0
text = "Writers"

[node name="SongWriters" type="TextEdit" parent="TabContainer/Metadata/VBoxContainer"]
margin_top = 516.0
margin_right = 618.0
margin_bottom = 617.0
size_flags_vertical = 3

[node name="Label5" type="Label" parent="TabContainer/Metadata/VBoxContainer"]
margin_top = 621.0
margin_right = 618.0
margin_bottom = 635.0
text = "Chart creator"

[node name="SongCreator" type="LineEdit" parent="TabContainer/Metadata/VBoxContainer"]
margin_top = 639.0
margin_right = 618.0
margin_bottom = 663.0

[node name="Technical Data" type="ScrollContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Technical Data"]
margin_right = 618.0
margin_bottom = 664.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Technical Data/VBoxContainer"]
margin_right = 618.0
margin_bottom = 14.0
text = "BPM"

[node name="BPMSpinBox" type="SpinBox" parent="TabContainer/Technical Data/VBoxContainer"]
margin_top = 18.0
margin_right = 618.0
margin_bottom = 42.0
max_value = 2.14748e+09
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="TabContainer/Technical Data/VBoxContainer"]
margin_top = 46.0
margin_right = 618.0
margin_bottom = 60.0
text = "Audio file"

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Technical Data/VBoxContainer"]
margin_top = 64.0
margin_right = 618.0
margin_bottom = 88.0

[node name="SelectAudioFileLineEdit" type="LineEdit" parent="TabContainer/Technical Data/VBoxContainer/HBoxContainer2"]
margin_right = 539.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="SelectAudioFileButton" type="Button" parent="TabContainer/Technical Data/VBoxContainer/HBoxContainer2"]
margin_left = 543.0
margin_right = 618.0
margin_bottom = 24.0
text = "Select file"

[node name="Label10" type="HBoxContainer" parent="TabContainer/Technical Data/VBoxContainer"]
margin_top = 92.0
margin_right = 618.0
margin_bottom = 117.0

[node name="Label" type="Label" parent="TabContainer/Technical Data/VBoxContainer/Label10"]
margin_top = 5.0
margin_right = 98.0
margin_bottom = 19.0
text = "Voice audio file"

[node name="TextureRect" type="TextureRect" parent="TabContainer/Technical Data/VBoxContainer/Label10"]
margin_left = 102.0
margin_right = 117.0
margin_bottom = 25.0
rect_min_size = Vector2( 15, 25 )
hint_tooltip = "(Optional) Audio for the voice, separated from the original instrumental, this makes the voice audio channel fade when the user fails a note.

If you use this, please ensure the audio file is instrumental only."
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="HBoxContainer3" type="HBoxContainer" parent="TabContainer/Technical Data/VBoxContainer"]
margin_top = 121.0
margin_right = 618.0
margin_bottom = 145.0

[node name="SelectVoiceAudioFileLineEdit" type="LineEdit" parent="TabContainer/Technical Data/VBoxContainer/HBoxContainer3"]
margin_right = 539.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="SelectVoiceAudioFileButton" type="Button" parent="TabContainer/Technical Data/VBoxContainer/HBoxContainer3"]
margin_left = 543.0
margin_right = 618.0
margin_bottom = 24.0
text = "Select file"

[node name="Label3" type="Label" parent="TabContainer/Technical Data/VBoxContainer"]
margin_top = 149.0
margin_right = 618.0
margin_bottom = 163.0
text = "Song preview start (in miliseconds)"

[node name="SongPreviewSpinBox" type="SpinBox" parent="TabContainer/Technical Data/VBoxContainer"]
margin_top = 167.0
margin_right = 618.0
margin_bottom = 191.0
max_value = 2.14748e+09
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="TabContainer/Technical Data/VBoxContainer"]
margin_top = 195.0
margin_right = 618.0
margin_bottom = 209.0
text = "YouTube URL (optional, leave empty to not use YouTube, can replace audio)"

[node name="YoutubeURL" type="LineEdit" parent="TabContainer/Technical Data/VBoxContainer"]
margin_top = 213.0
margin_right = 618.0
margin_bottom = 237.0

[node name="Label11" type="HBoxContainer" parent="TabContainer/Technical Data/VBoxContainer"]
margin_top = 241.0
margin_right = 618.0
margin_bottom = 266.0

[node name="IntroSkipCheckbox" type="CheckBox" parent="TabContainer/Technical Data/VBoxContainer/Label11"]
margin_right = 134.0
margin_bottom = 25.0
text = "Allows intro skip"

[node name="TextureRect" type="TextureRect" parent="TabContainer/Technical Data/VBoxContainer/Label11"]
margin_left = 138.0
margin_right = 153.0
margin_bottom = 25.0
rect_min_size = Vector2( 15, 25 )
hint_tooltip = "Allows the user to skip the song's intro, see also intro skip time"
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Label12" type="HBoxContainer" parent="TabContainer/Technical Data/VBoxContainer"]
margin_top = 270.0
margin_right = 618.0
margin_bottom = 295.0

[node name="Label" type="Label" parent="TabContainer/Technical Data/VBoxContainer/Label12"]
margin_top = 5.0
margin_right = 162.0
margin_bottom = 19.0
text = "Intro skip minimum time"

[node name="TextureRect" type="TextureRect" parent="TabContainer/Technical Data/VBoxContainer/Label12"]
margin_left = 166.0
margin_right = 181.0
margin_bottom = 25.0
rect_min_size = Vector2( 15, 25 )
hint_tooltip = "Minimum time in miliseconds to the first timing point where the intro skip option will appear"
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="IntroSkipTimeSpinbox" type="SpinBox" parent="TabContainer/Technical Data/VBoxContainer"]
margin_top = 299.0
margin_right = 618.0
margin_bottom = 323.0
min_value = 10.0
max_value = 2.14748e+09
value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UseYoutubeAsAudio" type="CheckBox" parent="TabContainer/Technical Data/VBoxContainer"]
margin_top = 327.0
margin_right = 618.0
margin_bottom = 351.0
text = "Use YouTube for audio"

[node name="UseYoutubeAsVideo" type="CheckBox" parent="TabContainer/Technical Data/VBoxContainer"]
margin_top = 355.0
margin_right = 618.0
margin_bottom = 379.0
text = "Use YouTube for video"

[node name="Charts" type="ScrollContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Charts"]
margin_right = 618.0
margin_bottom = 664.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Charts/HBoxContainer"]
margin_right = 75.0
margin_bottom = 664.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Easy" type="CheckBox" parent="TabContainer/Charts/HBoxContainer/VBoxContainer"]
margin_right = 75.0
margin_bottom = 24.0
text = "Easy"

[node name="Normal" type="CheckBox" parent="TabContainer/Charts/HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 75.0
margin_bottom = 52.0
text = "Normal"

[node name="Hard" type="CheckBox" parent="TabContainer/Charts/HBoxContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 75.0
margin_bottom = 80.0
text = "Hard"

[node name="VBoxContainer2" type="VBoxContainer" parent="TabContainer/Charts/HBoxContainer"]
margin_left = 79.0
margin_right = 153.0
margin_bottom = 664.0

[node name="Easy" type="SpinBox" parent="TabContainer/Charts/HBoxContainer/VBoxContainer2"]
margin_right = 74.0
margin_bottom = 24.0
min_value = 1.0
max_value = 10.0
step = 0.0
value = 1.0

[node name="Normal" type="SpinBox" parent="TabContainer/Charts/HBoxContainer/VBoxContainer2"]
margin_top = 28.0
margin_right = 74.0
margin_bottom = 52.0
min_value = 1.0
max_value = 10.0
step = 0.0
value = 1.0

[node name="Hard" type="SpinBox" parent="TabContainer/Charts/HBoxContainer/VBoxContainer2"]
margin_top = 56.0
margin_right = 74.0
margin_bottom = 80.0
min_value = 1.0
max_value = 10.0
step = 0.0
value = 1.0

[node name="Graphics" type="ScrollContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Graphics"]
margin_right = 618.0
margin_bottom = 664.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Graphics/VBoxContainer"]
margin_right = 618.0
margin_bottom = 14.0
text = "Preview image"

[node name="HBoxContainer3" type="HBoxContainer" parent="TabContainer/Graphics/VBoxContainer"]
margin_top = 18.0
margin_right = 618.0
margin_bottom = 42.0
size_flags_horizontal = 3

[node name="SelectPreviewImageLineEdit" type="LineEdit" parent="TabContainer/Graphics/VBoxContainer/HBoxContainer3"]
margin_right = 539.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="SelectPreviewImageButton" type="Button" parent="TabContainer/Graphics/VBoxContainer/HBoxContainer3"]
margin_left = 543.0
margin_right = 618.0
margin_bottom = 24.0
text = "Select file"

[node name="Label2" type="Label" parent="TabContainer/Graphics/VBoxContainer"]
margin_top = 46.0
margin_right = 618.0
margin_bottom = 60.0
text = "Background image"

[node name="HBoxContainer4" type="HBoxContainer" parent="TabContainer/Graphics/VBoxContainer"]
margin_top = 64.0
margin_right = 618.0
margin_bottom = 88.0
size_flags_horizontal = 3

[node name="SelectBackgroundImageLineEdit" type="LineEdit" parent="TabContainer/Graphics/VBoxContainer/HBoxContainer4"]
margin_right = 539.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="SelectBackgroundImageButton" type="Button" parent="TabContainer/Graphics/VBoxContainer/HBoxContainer4"]
margin_left = 543.0
margin_right = 618.0
margin_bottom = 24.0
text = "Select file"

[node name="Label3" type="Label" parent="TabContainer/Graphics/VBoxContainer"]
margin_top = 92.0
margin_right = 618.0
margin_bottom = 106.0
text = "Circle Image (optional)"

[node name="HBoxContainer5" type="HBoxContainer" parent="TabContainer/Graphics/VBoxContainer"]
margin_top = 110.0
margin_right = 618.0
margin_bottom = 134.0
size_flags_horizontal = 3

[node name="SelectCircleImageLineEdit" type="LineEdit" parent="TabContainer/Graphics/VBoxContainer/HBoxContainer5"]
margin_right = 539.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="SelectCircleImageButton" type="Button" parent="TabContainer/Graphics/VBoxContainer/HBoxContainer5"]
margin_left = 543.0
margin_right = 618.0
margin_bottom = 24.0
text = "Select file"

[node name="Label2123" type="Label" parent="TabContainer/Graphics/VBoxContainer"]
margin_top = 138.0
margin_right = 618.0
margin_bottom = 152.0
text = "Circle Logo (optional, replaces artist/circle text in some circumstances)."

[node name="HBoxContainer6" type="HBoxContainer" parent="TabContainer/Graphics/VBoxContainer"]
margin_top = 156.0
margin_right = 618.0
margin_bottom = 180.0
size_flags_horizontal = 3

[node name="SelectCircleLogoLineEdit" type="LineEdit" parent="TabContainer/Graphics/VBoxContainer/HBoxContainer6"]
margin_right = 539.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="SelectCircleLogoButton" type="Button" parent="TabContainer/Graphics/VBoxContainer/HBoxContainer6"]
margin_left = 543.0
margin_right = 618.0
margin_bottom = 24.0
text = "Select file"

[node name="AudioFileDialog" type="FileDialog" parent="."]
margin_right = 535.0
margin_bottom = 298.0
window_title = "Abrir un Archivo"
mode = 0
access = 2
filters = PoolStringArray( "*.ogg; OGG" )
current_dir = "/home/eirexe/Project Heartbeat/Project Heartbeat"
current_path = "/home/eirexe/Project Heartbeat/Project Heartbeat/"

[node name="VoiceAudioFileDialog" type="FileDialog" parent="."]
margin_right = 535.0
margin_bottom = 298.0
window_title = "Abrir un Archivo"
mode = 0
access = 2
filters = PoolStringArray( "*.ogg; OGG" )
current_dir = "/home/eirexe/Project Heartbeat/Project Heartbeat"
current_path = "/home/eirexe/Project Heartbeat/Project Heartbeat/"

[node name="PreviewFileDialog" type="FileDialog" parent="."]
margin_right = 535.0
margin_bottom = 298.0
window_title = "Abrir un Archivo"
mode = 0
access = 2
filters = PoolStringArray( "*.JPG; Joint Photographic Experts Group", "*.PNG; Portable Network Graphics" )
current_dir = "/home/eirexe/Project Heartbeat/Project Heartbeat"
current_path = "/home/eirexe/Project Heartbeat/Project Heartbeat/"

[node name="BackgroundFileDialog" type="FileDialog" parent="."]
margin_right = 535.0
margin_bottom = 298.0
window_title = "Abrir un Archivo"
mode = 0
access = 2
filters = PoolStringArray( "*.JPG; Joint Photographic Experts Group", "*.PNG; Portable Network Graphics" )
current_dir = "/home/eirexe/Project Heartbeat/Project Heartbeat"
current_path = "/home/eirexe/Project Heartbeat/Project Heartbeat/"

[node name="CircleFileDialog" type="FileDialog" parent="."]
margin_right = 535.0
margin_bottom = 298.0
window_title = "Abrir un Archivo"
mode = 0
access = 2
filters = PoolStringArray( "*.JPG; Joint Photographic Experts Group", "*.PNG; Portable Network Graphics" )
current_dir = "/home/eirexe/Project Heartbeat/Project Heartbeat"
current_path = "/home/eirexe/Project Heartbeat/Project Heartbeat/"

[node name="CircleLogoFileDialog" type="FileDialog" parent="."]
margin_right = 535.0
margin_bottom = 298.0
window_title = "Abrir un Archivo"
mode = 0
access = 2
filters = PoolStringArray( "*.JPG; Joint Photographic Experts Group", "*.PNG; Portable Network Graphics" )
current_dir = "/home/eirexe/Project Heartbeat/Project Heartbeat"
current_path = "/home/eirexe/Project Heartbeat/Project Heartbeat/"
[connection signal="pressed" from="TabContainer/Technical Data/VBoxContainer/HBoxContainer2/SelectAudioFileButton" to="AudioFileDialog" method="popup_centered_ratio" binds= [ 0.5 ]]
[connection signal="pressed" from="TabContainer/Technical Data/VBoxContainer/HBoxContainer3/SelectVoiceAudioFileButton" to="VoiceAudioFileDialog" method="popup_centered_ratio" binds= [ 0.5 ]]
[connection signal="pressed" from="TabContainer/Graphics/VBoxContainer/HBoxContainer3/SelectPreviewImageButton" to="PreviewFileDialog" method="popup_centered_ratio" binds= [ 0.5 ]]
[connection signal="pressed" from="TabContainer/Graphics/VBoxContainer/HBoxContainer4/SelectBackgroundImageButton" to="BackgroundFileDialog" method="popup_centered_ratio" binds= [ 0.5 ]]
[connection signal="pressed" from="TabContainer/Graphics/VBoxContainer/HBoxContainer5/SelectCircleImageButton" to="CircleFileDialog" method="popup_centered_ratio" binds= [ 0.5 ]]
[connection signal="pressed" from="TabContainer/Graphics/VBoxContainer/HBoxContainer6/SelectCircleLogoButton" to="CircleLogoFileDialog" method="popup_centered_ratio" binds= [ 0.5 ]]
[connection signal="file_selected" from="AudioFileDialog" to="." method="_on_AudioFileDialog_file_selected"]
[connection signal="file_selected" from="VoiceAudioFileDialog" to="." method="_on_VoiceAudioFileDialog_file_selected"]
[connection signal="file_selected" from="PreviewFileDialog" to="." method="_on_PreviewFileDialog_file_selected"]
[connection signal="file_selected" from="BackgroundFileDialog" to="." method="_on_BackgroundFileDialog_file_selected"]
[connection signal="file_selected" from="CircleFileDialog" to="." method="_on_CircleFileDialog_file_selected"]
[connection signal="file_selected" from="CircleLogoFileDialog" to="." method="_on_CircleLogoFileDialog_file_selected"]
